@@ -67,7 +67,8 @@
         </document>
       </branch>
     </defaults>
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
     <branch id="anjuta-2-2" stringfrozen="true"/>
     <branch id="anjuta-2-4" stringfrozen="true"/>
   </module>
