@@ -788,7 +788,7 @@
     <category id="devtools">
       <_description>Development Tools</_description>
       <module id="accerciser"/>
-      <module id="anjuta"/>
+      <module id="anjuta" branch="gnome-2-24"/>
       <module id="devhelp" branch="gnome-2-22"/>
       <module id="gdl"/>
       <module id="glade3" branch="gnome-2-22"/>
