@@ -1,3 +1,8 @@
+2008-09-25  Johannes Schmid  <jhs@gnome.org>
+
+	* releases.xml.in
+	* gnome-modules.xml.in: Branched anjuta for gnome-2-24
+
 2008-09-25  Claude Paroz  <claude@2xlibre.net>
 
 	* releases.xml.in: GNOME 2.24 is now stable. Thanks pterjan for
